<resources>
    <string name="app_name">MyBusinessCard</string>
    <string name="name">Andrea García</string>
    <string name="occupation">College Student</string>
    <string name="occupation2">Android Bootcamp Student</string>
    <string name="occupation3">Instructor</string>
    <string name="location">Mexico City, Mexico</string>
    <string name="email">andiee.grr@gmail.com</string>
    <string name="telegram">/@andreaagr</string>
    <string name="twitter">/@Hey_There_Andy</string>
    <string name="string_occupation">Occupation</string>
    <string name="string_contact">Contact Details</string>
    <string name="string_github">Github</string>
    <string name="string_linkedin">Linkedin</string>
    <string name="string_twitter">Twitter</string>
    <string name="linkedin">www.linkedin.com/in/andrea-garcía-ruiz-934159164</string>
    <string name="item1">About</string>
    <string name="share">Share</string>
</resources>
