<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:id="@+id/nestedscroll"
        android:layout_marginTop="60dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:fontFamily="@font/fonttittle"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/title_margin"
            android:layout_marginEnd="@dimen/title_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/title_margin"
            android:layout_marginStart="@dimen/title_margin"
            android:id="@+id/fullname"/>

    <TextView
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location"
            app:fontFamily="@font/contentfont"
            android:textColor="@color/location"
            app:layout_constraintTop_toBottomOf="@+id/fullname"
            app:layout_constraintStart_toStartOf="@+id/fullname"
            app:layout_constraintEnd_toEndOf="@+id/fullname"
            android:textSize="@dimen/location_size"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_height"
            android:background="@drawable/rounded_card"
            android:id="@+id/ll_occupation"
            app:layout_constraintTop_toBottomOf="@+id/fullname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/section_margin_end"
            android:layout_marginEnd="@dimen/section_margin_end"
            android:layout_marginTop="@dimen/section_margin_end">

        <TextView
                android:text="@string/string_occupation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_occupation"
                android:layout_weight="1"
                android:textColor="@color/white"
                app:fontFamily="@font/sections"
                android:textSize="@dimen/sections_textsize"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/sections_margin"
                android:layout_marginLeft="@dimen/sections_margin"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginStart="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_marginEnd="@dimen/card_margin"
            app:cardCornerRadius="@dimen/card_radius"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/ll_occupation"
            android:layout_marginTop="@dimen/card_margin"
            android:id="@+id/cv_occupation">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp">

            <TextView
                    android:text="@string/occupation"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/tv_cstudent"
                    app:layout_constraintStart_toEndOf="@+id/iv_lunam"
                    android:layout_marginLeft="@dimen/text_start"
                    android:layout_marginStart="@dimen/text_start"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="@+id/iv_lunam"
                    app:fontFamily="@font/contentfont"/>

            <ImageView
                    android:layout_width="@dimen/logo_size_vertical"
                    android:layout_height="@dimen/logo_size_vertical"
                    app:srcCompat="@drawable/logounam"
                    android:id="@+id/iv_lunam"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/image_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="@dimen/image_margin"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                    android:layout_width="@dimen/image_rw"
                    android:layout_height="@dimen/image_rw"
                    app:srcCompat="@drawable/rwlogo"
                    android:id="@+id/iv_lrw"
                    app:layout_constraintStart_toStartOf="@+id/iv_lunam"
                    android:layout_marginTop="@dimen/margin_rw_image"
                    app:layout_constraintTop_toBottomOf="@+id/iv_lunam"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="@dimen/margin_rw_image"
                    android:layout_marginStart="@dimen/margin_rw_image"/>

            <TextView
                    android:text="@string/occupation2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_bootcamp"
                    android:layout_marginTop="@dimen/separation_text_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_cstudent"
                    app:fontFamily="@font/contentfont"
                    app:layout_constraintStart_toStartOf="@+id/tv_cstudent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_card"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_occupation"
            android:layout_marginRight="@dimen/section_margin_end"
            android:id="@+id/ll_contactdetails"
            android:layout_marginEnd="@dimen/section_margin_end">

        <TextView
                android:text="@string/string_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_contactdetails"
                android:layout_weight="1"
                app:fontFamily="@font/sections"
                android:textColor="@color/white"
                android:textSize="@dimen/sections_textsize"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/sections_margin"
                android:layout_marginLeft="@dimen/sections_margin"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_contactdetails"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginStart="@dimen/card_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_marginEnd="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            app:cardCornerRadius="@dimen/card_radius"
            android:id="@+id/cv_contactdetails">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="@dimen/logo_size_vertical"
                    android:layout_height="@dimen/logo_size_vertical"
                    app:srcCompat="@drawable/telegram"
                    android:id="@+id/iv_ltelegram"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/image_margin"
                    android:layout_marginRight="@dimen/image_margin"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                    android:layout_width="@dimen/logo_size_vertical"
                    android:layout_height="@dimen/logo_size_vertical"
                    app:srcCompat="@drawable/email"
                    android:id="@+id/iv_lmail"
                    android:layout_marginEnd="@dimen/image_margin"
                    android:layout_marginRight="@dimen/image_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_ltelegram"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/image_margin"/>

            <TextView
                    android:text="@string/telegram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_telegram"
                    app:fontFamily="@font/contentfont"
                    app:layout_constraintEnd_toStartOf="@+id/iv_ltelegram"
                    android:layout_marginEnd="@dimen/text_start"
                    android:layout_marginRight="@dimen/text_start"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"/>

            <TextView
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_mail"
                    app:layout_constraintEnd_toStartOf="@+id/iv_lmail"
                    android:layout_marginEnd="@dimen/text_start"
                    android:layout_marginRight="@dimen/text_start"
                    android:layout_marginTop="@dimen/separation_text_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_telegram"
                    app:fontFamily="@font/contentfont"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
            android:layout_width="@dimen/image_size_vertical"
            android:layout_height="@dimen/image_size_vertical"
            app:srcCompat="@drawable/github"
            android:id="@+id/iv_github"
            app:layout_constraintStart_toEndOf="@+id/iv_twitter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/iv_linkedin"
            android:layout_marginTop="@dimen/image_margin"
            app:layout_constraintTop_toBottomOf="@+id/cv_contactdetails"/>

    <ImageView
            android:layout_width="@dimen/image_size_vertical"
            android:layout_height="@dimen/image_size_vertical"
            app:srcCompat="@drawable/linkedin"
            android:id="@+id/iv_linkedin"
            app:layout_constraintStart_toEndOf="@+id/iv_github"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_github"/>

    <ImageView
            android:layout_width="@dimen/image_size_vertical"
            android:layout_height="@dimen/image_size_vertical"
            app:srcCompat="@drawable/twitter"
            android:id="@+id/iv_twitter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/iv_github"
            app:layout_constraintTop_toTopOf="@+id/iv_github"/>


    <com.google.android.material.button.MaterialButton
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            app:layout_constraintTop_toBottomOf="@+id/iv_github"
            app:strokeColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/button_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>